fix: fixed splash page overflow

--- a/src/pages/SplashPage/SplashPage.module.scss
+++ b/src/pages/SplashPage/SplashPage.module.scss
@@ -14,7 +14,7 @@
       background: $primary;
 
       width: 100vw;
-      height: 100vh;
+      height: 100dvh;
 
       overflow-x: none;
 
